# aoc_2024

./: .clang-tidy  CMakeLists.txt  README.md
include/: utility.hpp
src/: d01p1.cpp  d01p2.cpp  d02p1.cpp  d02p2.cpp  d03p1.cpp  d03p2.cpp  d04p1.cpp  d04p2.cpp  d05p1.cpp  d05p2.cpp  d06p1.cpp  d06p2.cpp  d07p1.cpp  d07p2.cpp  d08p1.cpp  d08p2.cpp  d09p1.cpp  d09p2.cpp  d10p1.cpp  d10p2.cpp  d11p1.cpp  d11p2.cpp  d12p1.cpp  d12p2.cpp  d13p1.cpp  d13p2.cpp  d14p1.cpp  d14p2.cpp  d15p1.cpp  d15p2.cpp  d16p1.cpp  d16p2.cpp  d17p1.cpp  d17p2.cpp  d18p1.cpp  d18p2.cpp  d19p1.cpp  d19p2.cpp  d20p1.cpp  d20p2.cpp  (+13 more)
test/: d02_ex2.txt
